k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pacds
  labels:
    app.kubernetes.io/part-of: pacds
